src/parser_tests/tests_input/unit/good/Good08.ty
singleton class Random { 
    
    functions: {
        randomValue: (seed: Int, anotherSeed: String) -> Int = 3
    }
}
