src/parser_tests/tests_input/unit/bad/Bad22.ty
singleton class GoodClassName { 
    
    functions: {
        goodMethodName: (BadParamName: Int) -> Int = 2 * 3 + 4 * 5
    }
}
